Changes towards version 0.2:
- Graduated colours for crew in shipyard, from Nic
- Alien dialog fixes: Talking Pet, Utwig, Mycon, Syreen -fOSSiL
- Updated all game, menu, melee and weapon sounds to original 3DO
  ones (extracted using various tools); some sounds were simply
  wrong: menu - "device success", weapons - arilou, slylandro, thraddash;
  others had bad sampling rates; (fixes #19) -fOSSiL
- Fixed Melnrome repeating "Please do not mention this subject again"
  text (bug #145) -fOSSiL
- Fixed load/save screen leaving characters when having more
  than 1000 units of some type of resources (bug #75) -fOSSiL
- Lowered Drawable memory footprint, made Frame safer - Martin
- Support for running without voice .ogg files present -PBlue
- Slider should now work correctly everywhere -PhracturedBlue
- Added 'nosound' driver and --sound=openal|mixsdl|none
  option; -a option has been removed -fOSSiL
- Fix ZFP stuttering and some other random sound issues -PBlue
- Correctly deal with multiply-mapped keys.  This may fix some keys
  not being detected correctly on the Mac as well - PBlue
- OpenGL mode now fully supports partial screen updates -Mika
- Fixed melee ship selection-box bugs -fOSSiL
- Added a 4th button to starcon.key 'Esc' now emergency-escapes -PBlue
- Biadapt and biadv scalers now work in OpenGL mode too -Mika
- Fixed lockup when fastforwarding through orz comm -PBlue
- A new windows installer is now in builds/win32_install -PBlue
- Added '-a' switch to go between OpenAL and MixSDL at runtime -PBlue
- Melnorme will pronounce numbers now -fOSSiL
- Added icons to win32 builds (MSVC and mingw) -fOSSiL
- Removed the GraphicStrength code, since all that is handled with
  an arithmetic blit routine outside of the drawing thread
- Added an improved version of biadapt scaling filter,
  working name "biadv" (use --scale=biadv) -fOSSiL
- Removed SDL_mixer sound module
- TFB_FlushGraphics keeps track of smallest bounding box that requires