@@ -23,7 +23,7 @@
 
 int TFB_GL_InitGraphics (int driver, int flags, int width, int height, int bpp);
 void TFB_GL_UploadTransitionScreen (void);
-void TFB_GL_SwapBuffers (void);
+void TFB_GL_SwapBuffers (int force_full_redraw);
 SDL_Surface* TFB_GL_DisplayFormatAlpha (SDL_Surface *surface);
 
 
