@@ -1,4 +1,6 @@
 Changes towards version 0.2:
+- Pure mode partial screen updates are now more efficient;
+  fixed 'crossfades not finished' problem -Mika
 - Graduated colours for crew in shipyard, from Nic
 - Alien dialog fixes: Talking Pet, Utwig, Mycon, Syreen -fOSSiL
 - Updated all game, menu, melee and weapon sounds to original 3DO
